2022-06-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-buffer-local-variables): new function.
	(find-ebufferlocalvars): use `ee-buffer-local-variables'.

2022-06-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (ee-code-mpv-audio): Fixed a typo.

2022-06-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-git-dir): converted the setq to a defvar.

	* eev-mode.el (eev-mode-map-set): moved the `define-key' for
	`find-git-links' from eev-tlinks.el to here.

	* eev-blinks.el (ee-find-eejumps-header): added a pointer to
	`(find-elisp-intro)'.

	* eev-wconfig.el (find-wconfig-lua-links): added a section on
	Python.

2022-06-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-load.el (eev-beginner): tell the autoload for `eev-beginner'
	that `eev-beginner' is an interactive function.

	* eev-tlinks.el (ee-psne-eevvideo-core): added the "sep" argument
	to the mapconcats.

2022-05-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (ee-time-to-youtube-time): fixed a bug.

2022-05-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2022eevwconfigvideo): new function.
	(ee-1stclassvideos-info): added an entry for "2022eevwconfig".

2022-05-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-eface-links): added some items.

2022-05-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-eev2019video, find-eev2020video)
	(find-eev2021video, find-eev2021bvideo, find-eevnavvideo)
	(find-eevtemplvideo, find-eevfherelvideo, find-eevtestblsvideo)
	(find-eevvlinksvideo, find-oficina20210video)
	(find-oficina2021avideo, find-oficina2021bvideo)
	(find-2021ssrvideo, find-2021workshop1video)
	(find-2021workshop2video, find-2021workshop3video)
	(find-2021workshop4video, find-2021workshop5video)
	(find-2021workshop6video, find-2021orgfornonusersvideo)
	(find-2021ffllvideo, find-2022eevmake0video)
	(find-2022findeevanggvideo, find-2022findelispintrovideo)