@@ -32,6 +32,8 @@
 
 ;;; Commentary:
 
+;; THIS FILE IS OBSOLETE!
+;;
 ;; Until march/2019 this file was used by a few of the (many) ways of
 ;; loading eev; now it is totally obsolete, and it will be removed at
 ;; some point. See these for the current standard ways to install eev:
